--- a/conteudo.html
+++ b/conteudo.html
@@ -114,7 +114,6 @@
                         <p>Você concorda que é mais fácil mencionar as diferenças entre as crianças e as plantas do que
                             as semelhanças entre elas? </p>
                         <p class="no-print">Entenda melhor a respeito da biodiversidade no vídeo a seguir: </p>
-                        !! Espera para vídeo
                         <iframe class="no-print" src="" title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen="" style="height: 100%; width: 100%; background-color: #00767F;"></iframe>
@@ -325,7 +324,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="only-print">
+                        <!-- <div class="only-print">
                             <h4>Amazônia</h4>
                             <p> 49%</p>
                             <p>Abrange a maior floresta tropical do mundo e contém 20% da disponibilidade mundial de
@@ -350,7 +349,7 @@
                             <p> 2%</p>
                             <p>Caracterizado por clima chuvoso, sem período seco e com temperaturas negativas no
                                 inverno.</p>
-                        </div>
+                        </div> -->
                         <p>Como você pôde ver, cada bioma tem características bem distintas. Em qual bioma você vive?
                             Quais são as plantas e os animais típicos da sua região? Anote e compartilhe com seus
                             colegas no
@@ -359,10 +358,8 @@
                         </p>
                         <p> A biodiversidade pode ser uma grande vantagem para o Brasil. O país está no grupo dos
                             megadiversos, sendo uma das nações que abrigam a maioria das espécies do planeta.</p>
-                        <p> Então, que tal colocar em prática o que você aprendeu até agora? </p>
-                        !! Observe os biomas brasileiros no mapa e arraste as figuras das plantas e dos animais para os
-                        seus biomas correspondentes. <br>
-                        !!Design/Diagramador: espaço para ODA <br>
+                        <p class="no-print"> Então, que tal colocar em prática o que você aprendeu até agora? </p>
+
                         <iframe class="no-print" src="" title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen="" style="height: 100%; width: 100%; background-color: #00767F;"></iframe>
@@ -398,7 +395,6 @@
                             mesma espécie, entretanto, a cor dos pelos, o tamanho, a personalidade e outros atributos
                             mudam conforme o indivíduo. A variação de características em uma população é a base para que
                             as seleções natural e artificial possam atuar. </p>
-                        !!Design/Diagramador: espaço para video da animação, AUDIOVISUAL <br>
                         <iframe class="no-print" src="" title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen="" style="height: 100%; width: 100%; background-color: #00767F;"></iframe>
@@ -462,7 +458,7 @@
             <div class="pagina">
                 <div class="bloco1-pg2">
                     <div class="container estilopg2">
-                        <h4>Tragédia de Mariana: o impacto na biodiversidade </h4>
+                        <h4 class="fontetitulo">Tragédia de Mariana: o impacto na biodiversidade </h4>
                         <p>Em uma cidade chamada Mariana, localizada no centro-sul de Minas Gerais, ocorreu, em 2015, um
                             dos maiores desastres ambientais do Brasil. O desastre foi causado pelo rompimento de uma
                             barragem de rejeitos de mineração de ferro. As barragens são construídas para conter a parte
@@ -529,14 +525,6 @@
                             </div>
                         </div>
                         <div class="only-print">
-                            <figure><img src="img/assets/pg2/desastre1.png" class="img-fluid d-block m-auto"
-                                    data-aos="zoom-in" alt=""></figure>
-                            <figure><img src="img/assets/pg2/desastre2.png" class="img-fluid d-block m-auto"
-                                    data-aos="zoom-in" alt=""></figure>
-                            <figure><img src="img/assets/pg2/desastre3.png" class="img-fluid d-block m-auto"
-                                    data-aos="zoom-in" alt=""></figure>
-                            <figure><img src="img/assets/pg2/desastre4.png" class="img-fluid d-block m-auto"
-                                    data-aos="zoom-in" alt=""></figure>
                             <figure><img src="img/assets/pg2/percurso.png" class="img-fluid d-block m-auto"
                                     data-aos="zoom-in" alt=""></figure>
                         </div>
@@ -565,7 +553,7 @@
                 <div class="bloco3-pg2">
                     <div class="bloco2pg2-paralax1"></div>
                     <div class="container estilopg2-3">
-                        <h4>Um estudo de caso: o caranguejo chama-maré</h4>
+                        <h4 class="fontetitulo">Um estudo de caso: o caranguejo chama-maré</h4>
                         <p>Entre as espécies de animais afetados pela tragédia podemos citar o caranguejo <i>Minuca
                                 victoriana</i>, popularmente conhecido como “chama-maré”. Ele é um caranguejo
                             semiterrestre que
@@ -583,9 +571,6 @@
                             seu trabalho de escavação, causando a extinção de diversos organismos. </p>
                         <img src="img/assets/pg2/img_dir2.png" alt="" class="rellax rellax-8 no-print"
                             data-rellax-speed="2">
-                        !!Design/Diagramador: deixar um espaço para uma tirinha que a equipe de ODA vai enviar <br>
-                        !!Tirinha mostrando o caranguejo chama-maré no seu habitat natural. Após a barragem, vários
-                        somem e junto com eles os outros animais interligados. <br>
                         <iframe class="no-print" src="" title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen="" style="height: 100%; width: 100%; background-color: #00767F;"></iframe>
@@ -673,7 +658,7 @@
                             consequências em todo o ecossistema. Por isso, é importante que ações que causem impactos
                             ambientais sejam evitadas ao máximo e que medidas de proteção e conservação da
                             biodiversidade sejam adotadas e efetivamente implementadas. </p>
-                        <h4>Conheça mais detalhes sobre a energia que conecta os seres vivos</h4>
+                        <h4 class="fontetitulo">Conheça mais detalhes sobre a energia que conecta os seres vivos</h4>
                         <p> Ao contrário do que se pode pensar, a energia presente nos seres vivos não é criada nem
                             destruída, ela é transferida de um ser para outro, formando as cadeias e teias alimentares.
                             Em
@@ -705,7 +690,7 @@
                             equilíbrio do ecossistema.</p>
                         <p> A imagem a seguir mostra um exemplo de cadeia alimentar que ocorre em Mariana/MG. Observe o
                             fluxo energético demonstrado:</p>
-                        !!Design/Diagramador: deixar um epaço para a imagem que será enviada pela equipe de ODA <br>
+                       
                         <iframe class="no-print" src="" title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen="" style="height: 100%; width: 100%; background-color: #00767F;"></iframe>
@@ -790,74 +775,21 @@
                                 data-bs-original-title="Níveis de nutrição a que pertence um indivíduo, os quais indicam o fluxo de energia entre os seres vivos presentes, na cadeia ou na teia alimentar. ">
                                 níveis tróficos </button> que os seres vivos ocupam nessa teia alimentar.
                         </p>
-                        <div class="col-sm-12 col-xs-12">
-                            <div class="flip-card_fig">
-                                <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <div class="moldurapg2">
-                                            <figure>
-                                                <img src="img/assets/pg2/figura5.png" class="img-fluid d-block m-auto"
-                                                    data-aos="zoom-in" alt="">
-                                                <figcaption>
-                                                    Figura 5 – Níveis tróficos <br>
-                                                    Fonte: Sesc EAD EJA (2023)
-                                                </figcaption>
-                                            </figure>
-                                        </div>
-                                    </div>
-                                    <div class="flip-card-back">
-                                        <div class="table-responsive">
-                                            <table class="sesc w-100">
-                                                <tbody>
-                                                    <tr>
-                                                        <td>Árvore</td>
-                                                        <td>Produtor</td>
-                                                        <td>Nível trófico 1 (N.T. 1)</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Pássaro</td>
-                                                        <td>Consumidor primário e secundário (C1 e C2)</td>
-                                                        <td>Níveis tróficos 2 e 3 (N.T. 2 e 3)</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Lagarta</td>
-                                                        <td>Consumidor primário (C1)</td>
-                                                        <td>Nível trófico 2 (N.T. 2)</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Sapo</td>
-                                                        <td>Consumidor secundário (C2)</td>
-                                                        <td>Nível trófico 3 (N.T. 3)</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Serpente</td>
-                                                        <td>Consumidor secundário e terciário (C2 e C3)</td>
-                                                        <td>Níveis tróficos 3 e 4 (N.T. 3 e 4)</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Ave de rapina</td>
-                                                        <td>Consumidor secundário, terciário e quaternário (C2, C3 e C4)
-                                                        </td>
-                                                        <td>Níveis tróficos 3, 4 e 5 (N.T. 3, 4 e 5)</td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                        <figcaption>
-                                            Quadro 2 – Níveis tróficos <br>
-                                            Fonte: Sesc EAD EJA (2023)
-                                        </figcaption>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="moldurapg2">
+                            <figure>
+                                <img src="img/assets/pg2/figura5.png" class="img-fluid d-block m-auto"
+                                    data-aos="zoom-in" alt="">
+                                <figcaption>
+                                    Figura 5 – Níveis tróficos <br>
+                                    Fonte: Sesc EAD EJA (2023)
+                                </figcaption>
+                            </figure>
                         </div>
                         <p> Em teias alimentares não há fluxo energético em apenas uma direção (unidirecional), como
                             ocorre em cadeias alimentares. Nas teias, o mesmo ser vivo pode ocupar mais de um nível
                             trófico e níveis tróficos diferentes, com exceção do produtor.</p>
-                        <p> Agora que sabemos da importância das cadeias e teias alimentares, é hora de praticar. </p>
-                        !! Design/Diagramador: espaço para ODA <br>
-                        !!Objeto: Material para os estudantes organizarem uma cadeia alimentar simples e, acertando essa
-                        cadeia, a construção de uma teia. (ODA estilo clica e arrasta) <br>
+                        <p class="no-print"> Agora que sabemos da importância das cadeias e teias alimentares, é hora de praticar. </p>
+                      
                         <iframe class="no-print" src="" title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen="" style="height: 100%; width: 100%; background-color: #00767F;"></iframe>
@@ -1150,15 +1082,13 @@
                             podendo
                             acelerar o aquecimento global.</p>
                         <h4>Efeito estufa e pegada de carbono </h4>
-                        <p>Assista ao vídeo a seguir para conhecer mais detalhes sobre o efeito estufa e a pegada do
+                        <p class="no-print">Assista ao vídeo a seguir para conhecer mais detalhes sobre o efeito estufa e a pegada do
                             carbono: </p>
-                        !!espaço para video <br>
                         <iframe class="no-print" src="" title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen="" style="height: 100%; width: 100%; background-color: #fff;"></iframe>
                         <div class="only-print">
                             <p>Observe as características das imagens abaixo: </p>
-                            !!figuras <br>
                             <p>Imagine que você está saindo de casa para o trabalho e verifica que a previsão da
                                 temperatura para o dia é de 37°C. No caminho, você passa por um parque arborizado
                                 até chegar ao prédio em que trabalha. Agora, analisando os ambientes acima, você
@@ -1213,8 +1143,8 @@
                             provocadas pelo lançamento de gases de efeito estufa emitidos por cada produto que
                             consumimos,
                             processo que adotamos ou serviço que prestamos ou solicitamos.</p>
-                        <p>Qual é a sua pegada?</p>
-                        !!Design/Diagramador: espaço para ODA: quiz exemplo: http://www.pegadaecologica.org.br/ <br>
+                        <p class="no-print">Qual é a sua pegada?</p>
+
                         <iframe class="no-print" src="" title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen="" style="height: 100%; width: 100%; background-color: #fff;"></iframe>
@@ -1239,15 +1169,6 @@
                         <div class="only-print">
                             <figure><img src="img/assets/pg3/ciclos.png" class="img-fluid d-block m-auto"
                                     data-aos="zoom-in" alt=""></figure>
-                            <p> Ciclo longo: </p>
-                            <p>Vapor d’água na atmosfera </p>
-                            <p>Precipitação </p>
-                            <p>Rios e águas subterrâneas </p>
-                            <p>Processos vitais: transpiração, urina... </p>
-                            <p>Ciclo simples: </p>
-                            <p>Precipitação </p>
-                            <p>Oceanos </p>
-                            <p>Evaporação </p>
                         </div>
                         <p> O <b>ciclo simples</b> da água é a circulação pelas camadas da terra, dos oceanos e da
                             atmosfera:
