--- a/conteudo.html
+++ b/conteudo.html
@@ -1052,7 +1052,7 @@
                         </div>
                         <p> Esse gás nitrogênio (N2) disponível na atmosfera pode ser transformado pela energia dos
                             raios
-                            elétricos, por exemplo. Assim, ele é transformado em nitrato (NO3-), que se dissolve na água
+                            elétricos, por exemplo. Assim, ele é transformado em nitrato (NO<sub>3</sub>-), que se dissolve na água
                             da
                             chuva e chega ao solo e depois às plantas. As plantas absorvem o nitrogênio presente no
                             nitrato
