--- a/conteudo.html
+++ b/conteudo.html
@@ -198,10 +198,9 @@
                             aria-hidden="true" style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
                                 <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title" id="bt-amazonia">Amazônia</h4>
-                                        <button type="button" class="btn-close no-print" data-bs-dismiss="modal"
-                                            aria-label="Close" aria-hidden="true"></button>
+                                    <div class="modal-header1">
+                                        <h4 class="modal-title" id="bt-amazonia"></h4>
+
                                     </div>
                                     <div class="modal-body">
                                         <p>49%</p>
@@ -220,10 +219,8 @@
                             aria-hidden="true" style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
                                 <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title" id="bt-cerrado">Cerrado</h4>
-                                        <button type="button" class="btn-close no-print" data-bs-dismiss="modal"
-                                            aria-label="Close" aria-hidden="true"></button>
+                                    <div class="modal-header2">
+                                        <h4 class="modal-title" id="bt-cerrado"></h4>
                                     </div>
                                     <div class="modal-body">
                                         <p>24%</p>
@@ -241,10 +238,9 @@
                             aria-hidden="true" style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
                                 <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title" id="bt-caatinga">Caatinga</h4>
-                                        <button type="button" class="btn-close no-print" data-bs-dismiss="modal"
-                                            aria-label="Close" aria-hidden="true"></button>
+                                    <div class="modal-header3">
+                                        <h4 class="modal-title" id="bt-caatinga"></h4>
+
                                     </div>
                                     <div class="modal-body">
                                         <p>10%</p>
@@ -263,10 +259,9 @@
                             aria-hidden="true" style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
                                 <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title" id="bt-pantanal">Pantanal</h4>
-                                        <button type="button" class="btn-close no-print" data-bs-dismiss="modal"
-                                            aria-label="Close" aria-hidden="true"></button>
+                                    <div class="modal-header4">
+                                        <h4 class="modal-title" id="bt-pantanal"></h4>
+
                                     </div>
                                     <div class="modal-body">
                                         <p>2%</p>
@@ -284,10 +279,9 @@
                             style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
                                 <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title" id="bt-mata">Mata Atlântica</h4>
-                                        <button type="button" class="btn-close no-print" data-bs-dismiss="modal"
-                                            aria-label="Close" aria-hidden="true"></button>
+                                    <div class="modal-header5">
+                                        <h4 class="modal-title" id="bt-mata"> </h4>
+
                                     </div>
                                     <div class="modal-body">
                                         <p>13%</p>
@@ -306,10 +300,9 @@
                             aria-hidden="true" style="display: none;">
                             <div class="modal-dialog modal-lg modal-dialog-centered">
                                 <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title" id="bt-pampa">Pampa</h4>
-                                        <button type="button" class="btn-close no-print" data-bs-dismiss="modal"
-                                            aria-label="Close" aria-hidden="true"></button>
+                                    <div class="modal-header6">
+                                        <h4 class="modal-title" id="bt-pampa"></h4>
+
                                     </div>
                                     <div class="modal-body">
                                         <p>2%</p>
@@ -621,9 +614,6 @@
                         </div>
                         <img src="img/assets/pg2/img_dir2.png" alt="" class="rellax rellax-8 no-print"
                             data-rellax-speed="2">
-                        <iframe class="no-print" src="" title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen="" style="height: 100%; width: 100%; background-color: #00767F;"></iframe>
                         <p> Analisando o caso do caranguejo chama-maré, percebemos como a extinção de uma espécie pode
                             levar
                             ao extermínio de outras centenas, porque existe uma relação de dependência entre elas.</p>
@@ -1052,7 +1042,8 @@
                         </div>
                         <p> Esse gás nitrogênio (N2) disponível na atmosfera pode ser transformado pela energia dos
                             raios
-                            elétricos, por exemplo. Assim, ele é transformado em nitrato (NO<sub>3</sub>-), que se dissolve na água
+                            elétricos, por exemplo. Assim, ele é transformado em nitrato (NO<sub>3</sub>-), que se
+                            dissolve na água
                             da
                             chuva e chega ao solo e depois às plantas. As plantas absorvem o nitrogênio presente no
                             nitrato
@@ -1201,11 +1192,6 @@
                             provocadas pelo lançamento de gases de efeito estufa emitidos por cada produto que
                             consumimos,
                             processo que adotamos ou serviço que prestamos ou solicitamos.</p>
-                        <p class="no-print">Qual é a sua pegada?</p>
-
-                        <iframe class="no-print" src="" title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen="" style="height: 100%; width: 100%; background-color: #fff;"></iframe>
                         <h4>Ciclo da água </h4>
                         <p> A água é um recurso natural fundamental para a sobrevivência de todos os seres vivos do
                             planeta.
@@ -1259,7 +1245,7 @@
                         <div class="row">
                             <div class="col-6">
                                 <figure>
-                                    <img src="img/assets/pg3/figura7.png" class="img-fluid d-block m-auto"
+                                    <img src="img/assets/pg3/figura7.png" class="img-fluid d-block fim"
                                         data-aos="zoom-in"
                                         alt="A imagem mostra várias pessoas de fundo e em destaque uma mulher branca, com cabelos cacheados, segurando um cartaz com a frase em inglês 'não existe planeta B'.">
                                     <figcaption>
@@ -1342,7 +1328,7 @@
                             </div>
                             <div class="col-6">
                                 <figure>
-                                    <img src="img/assets/pg3/figura8.png" class="img-fluid d-block m-auto"
+                                    <img src="img/assets/pg3/figura8.png" class="img-fluid d-block fim"
                                         data-aos="zoom-in" alt="">
                                     <figcaption>
                                         Figura 8 – Parque eólico
