--- a/conteudo.html
+++ b/conteudo.html
@@ -544,7 +544,7 @@
                     </div>
                 </div>
                 <div class="bloco3-pg2">
-                    <div class="bloco2pg2-paralax1"></div>
+                    <!-- <div class="bloco2pg2-paralax1"></div> -->
                     <div class="container estilopg2-3">
                         <h4 class="fontetitulo">Um estudo de caso: o caranguejo chama-maré</h4>
                         <p>Entre as espécies de animais afetados pela tragédia podemos citar o caranguejo <i>Minuca
