--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="modal-intro">
         <p>Olá! Antes de começar, assista ao vídeo introdutório sobre o módulo a seguir.</p>
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="ytb embed-responsive-item" src="https://www.youtube.com/embed/ox_O445PoNs"
+          <iframe class="ytb embed-responsive-item" src=""
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
