--- a/conteudo.html
+++ b/conteudo.html
@@ -1245,7 +1245,7 @@
                         <div class="row">
                             <div class="col-6">
                                 <figure>
-                                    <img src="img/assets/pg3/figura7.png" class="img-fluid d-block fim"
+                                    <img src="img/assets/pg3/figura7.png" class="img-fluid d-block fim m-auto"
                                         data-aos="zoom-in"
                                         alt="A imagem mostra várias pessoas de fundo e em destaque uma mulher branca, com cabelos cacheados, segurando um cartaz com a frase em inglês 'não existe planeta B'.">
                                     <figcaption>
@@ -1328,7 +1328,7 @@
                             </div>
                             <div class="col-6">
                                 <figure>
-                                    <img src="img/assets/pg3/figura8.png" class="img-fluid d-block fim"
+                                    <img src="img/assets/pg3/figura8.png" class="img-fluid d-block fim m-auto"
                                         data-aos="zoom-in" alt="">
                                     <figcaption>
                                         Figura 8 – Parque eólico
