--- a/conteudo.html
+++ b/conteudo.html
@@ -1243,7 +1243,7 @@
                     <div class="container estilo3pg3">
                         <h3>Encerramento</h3>
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-md-6 col-lg-6 col-xs-12	col-sm-12 align-self-center justify-content-center">
                                 <figure>
                                     <img src="img/assets/pg3/figura7.png" class="img-fluid d-block fim m-auto"
                                         data-aos="zoom-in"
@@ -1255,7 +1255,7 @@
                                     </figcaption>
                                 </figure>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6 col-lg-6 col-xs-12	col-sm-12 align-self-center justify-content-center">
                                 <p> Neste módulo, exploramos as diversas formas de manifestação da vida em seus
                                     diferentes
                                     níveis de
@@ -1297,7 +1297,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-md-6 col-lg-6 col-xs-12	col-sm-12 align-self-center justify-content-center">
                                 <p> Então, frisamos novamente que é a partir da educação ambiental e da disseminação de
                                     informações
                                     sobre a importância da proteção ambiental que se pode estimular a reflexão crítica
@@ -1326,7 +1326,7 @@
                                     formas de
                                     vida na Terra.</p>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6 col-lg-6 col-xs-12	col-sm-12 align-self-center justify-content-center">
                                 <figure>
                                     <img src="img/assets/pg3/figura8.png" class="img-fluid d-block fim m-auto"
                                         data-aos="zoom-in" alt="">
