--- a/conteudo.html
+++ b/conteudo.html
@@ -1255,7 +1255,7 @@
                                     </figcaption>
                                 </figure>
                             </div>
-                            <div class="col-md-6 col-lg-6 col-xs-12	col-sm-12 align-self-center justify-content-center">
+                            <div class="col-md-6 col-lg-6 col-xs-12	col-sm-12 align-self-center justify-content-center margem">
                                 <p> Neste módulo, exploramos as diversas formas de manifestação da vida em seus
                                     diferentes
                                     níveis de
@@ -1297,7 +1297,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-lg-6 col-xs-12	col-sm-12 align-self-center justify-content-center">
+                            <div class="col-md-6 col-lg-6 col-xs-12	col-sm-12 align-self-center justify-content-center margem">
                                 <p> Então, frisamos novamente que é a partir da educação ambiental e da disseminação de
                                     informações
                                     sobre a importância da proteção ambiental que se pode estimular a reflexão crítica
